Fixes #8 - Hide Related Content on Small Screens
Hidden 767px and below

--- a/stylesheets/inside-responsive.scss
+++ b/stylesheets/inside-responsive.scss
@@ -80,4 +80,8 @@ input[type="submit"] {
 	#maincontainer h4 {font-size: 1em !important;}
 	#maincontainer h5 {font-size: .9em !important;}
 	#maincontainer h6 {font-size: .7em !important;}
+
+	#relatedtopics {
+		display: none;
+	}
 }
